--- a/.gitignore
+++ b/.gitignore
@@ -29,16 +29,18 @@ build/
 .gradle
 local.properties
 *.iml
-*.hprof
-.cxx/
-*.keystore
-!debug.keystore
 
 # node.js
 #
 node_modules/
 npm-debug.log
 yarn-error.log
+
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+!debug.keystore
 
 # fastlane
 #
@@ -47,20 +49,35 @@ yarn-error.log
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
 
-**/fastlane/report.xml
-**/fastlane/Preview.html
-**/fastlane/screenshots
-**/fastlane/test_output
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
 
 # Bundle artifact
 *.jsbundle
 
-# Ruby / CocoaPods
+# CocoaPods,resolve file
 /ios/Pods/
-/vendor/bundle/
+/ios/Podfile.lock
+ios/Podfile.lock
+/ios/build
 
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
 
-# testing
-/coverage
+# Ignore test-related files
+coverage/
+package-lock.json
+.scannerwork/.sonar_lock
+.scannerwork/report-task.txtc
+.scannerwork/report-task.txt
+*.lock
+
+
+.env
+
+Package.resolved
+
+#sonar-project.properties
+sonar-project.properties
+
+# Android build
+android/app/release/
